[gd_scene load_steps=14 format=3 uid="uid://1sey1nnue7hk"]

[ext_resource type="PackedScene" uid="uid://dk5uuadk0v445" path="res://Player.tscn" id="1_glv2v"]
[ext_resource type="Script" uid="uid://dht6h225oe8b8" path="res://main.gd" id="1_r0du0"]
[ext_resource type="PackedScene" uid="uid://dt64yn5au7hco" path="res://fonts/Mob.tscn" id="2_r0du0"]
[ext_resource type="Script" uid="uid://d03lg1e2eah1w" path="res://score.gd" id="4_cm0pq"]
[ext_resource type="Material" path="res://art/mob_body.tres" id="4_lgr22"]
[ext_resource type="FontFile" uid="uid://cyxhh7ddkn62q" path="res://fonts/Montserrat-Medium.ttf" id="5_3dxm6"]
[ext_resource type="AudioStream" uid="uid://c5qpnfga41t4p" path="res://art/House In a Forest Loop.ogg" id="5_fos0i"]

[sub_resource type="BoxShape3D" id="BoxShape3D_r0du0"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_glv2v"]
material = ExtResource("4_lgr22")
size = Vector3(60, 2, 60)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fos0i"]
albedo_color = Color(0.980143, 0.174512, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_3dxm6"]
material = SubResource("StandardMaterial3D_fos0i")

[sub_resource type="Curve3D" id="Curve3D_lgr22"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -3.0331, 0, -2.03285, 0, 0, 0, 0, 0, 0, 3.01966, 0, -2.02121, 0, 0, 0, 0, 0, 0, 3.04246, 0, 1.98494, 0, 0, 0, 0, 0, 0, -3.06406, 0, 1.95981),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="LabelSettings" id="LabelSettings_lgr22"]
font = ExtResource("5_3dxm6")
font_size = 21

[node name="World" type="Node"]
script = ExtResource("1_r0du0")
mob_scene = ExtResource("2_r0du0")

[node name="Player" parent="." instance=ExtResource("1_glv2v")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
speed = 2.0
jump_impulse = 10.0

[node name="ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="ground"]
shape = SubResource("BoxShape3D_r0du0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ground"]
mesh = SubResource("BoxMesh_glv2v")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0)
shadow_enabled = true

[node name="Marker3D" type="Marker3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Marker3D"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 3, 3)
fov = 30.0

[node name="Cylinders" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -3, 0, 2)
mesh = SubResource("CylinderMesh_3dxm6")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 3, 0, 2)
mesh = SubResource("CylinderMesh_3dxm6")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -3, 0, -2)
mesh = SubResource("CylinderMesh_3dxm6")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 3, 0, -2)
mesh = SubResource("CylinderMesh_3dxm6")

[node name="Spawnpath" type="Path3D" parent="."]
curve = SubResource("Curve3D_lgr22")

[node name="Pathlocation" type="PathFollow3D" parent="Spawnpath"]
transform = Transform3D(-0.00192301, 0, -0.999997, 0, 1, 0, 0.999997, 0, -0.00192301, -3.0331, 0, -2.03285)

[node name="Timer mob" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Score" type="Label" parent="UserInterface"]
layout_mode = 1
offset_left = 14.0
offset_top = 38.0
offset_right = 187.0
offset_bottom = 71.0
text = "Score: 0"
script = ExtResource("4_cm0pq")

[node name="ColorRect" type="ColorRect" parent="UserInterface"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.909804, 0.909804, 0.909804, 0.137255)

[node name="Label" type="Label" parent="UserInterface/ColorRect"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press enter to retry"
horizontal_alignment = 1

[node name="Label" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 9.0
offset_top = 2.0
offset_right = 596.0
offset_bottom = 61.0
text = "นายณัฐพงษ์ ด้างถางคำ 663380264-9 AI sec01

"
label_settings = SubResource("LabelSettings_lgr22")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fos0i")
volume_db = -25.0
autoplay = true

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="Timer mob" to="." method="_on_timer_mob_timeout"]
